force-app/main/default/objects/Doctor__c/Doctor__c.object-meta.xml
<CustomObject>
    <label>Doctor</label>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>