force-app/main/default/objects/Doctor__c/fields/Languages_Spoken__c.field-meta.xml
<CustomField>
    <fullName>Languages_Spoken__c</fullName>
    <label>Languages Spoken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>